--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "password-validator": "^5.2.1",
+    "validate-date": "^2.0.0"
   },
   "devDependencies": {
+    "email-validator": "^2.0.4",
     "jsonwebtoken": "^8.5.1"
   }
 }
