--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "password-validator": "^5.2.1",
-    "validate-date": "^2.0.0"
-  },
-  "devDependencies": {
+    "validate-date": "^2.0.0",
     "email-validator": "^2.0.4",
     "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
   }
 }
