--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "password-validator": "^5.2.1",
-    "validate-date": "^2.0.0",
-    "email-validator": "^2.0.4",
-    "jsonwebtoken": "^8.5.1"
-  },
-  "devDependencies": {
+    "validate-date": "^2.0.0"
   }
 }
