--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "email-validator": "^2.0.4",
     "express": "^4.18.0",
+    "google-auth-library": "^8.0.2",
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
